# my-rag

./: .code-workspace  .gitattributes  .gitignore  docker-compose.yml  nvidia-container-toolkit.bat  start.bat
.devcontainer/: devcontainer.json
builder/: build_index.py  build_index.sh  main.py  node_parser.py  pull.sh  pyproject.toml  run.sh  scrapy.cfg  scrapy.sh  smart_markdown_node_parser.py
builder/.devcontainer/: Dockerfile  devcontainer.json
builder/chroma_db/: chroma.sqlite3
builder/chroma_db/57c45730-d035-4ff3-83c7-be848f0a4659/: index_metadata.pickle
builder/chroma_db/7ede3ea4-9714-460f-918d-bd5fb1aec2ea/: index_metadata.pickle
builder/langchain_ai_docs/: items.py  middlewares.py  pipelines.py  settings.py
builder/langchain_ai_docs/spiders/: spider.py
chat/: main.py  pyproject.toml  send-request.sh
chat/.devcontainer/: Dockerfile  devcontainer.json
deploy/: Dockerfile-my-rag-container-0  Dockerfile-my-rag-container-1  cdk.context.json  package-lock.json  package.json
deploy/.devcontainer/: Dockerfile  devcontainer.json
deploy/lib/: app-stack.ts
front/: next.config.ts  package-lock.json  package.json
front/.devcontainer/: devcontainer.json
front/app/: layout.tsx  page.tsx
front/components/: Echo.tsx  Messages.tsx  Text.tsx
front/hooks/: useChat.ts
front/stores/: useChatStore.ts
front/types/: propEcho.ts  propMessages.ts  propText.ts
langchain-ai-docs/: build.sh  start.sh
langchain-ai-docs/.devcontainer/: Dockerfile  devcontainer.json
query/: pyproject.toml
query/.devcontainer/: Dockerfile  devcontainer.json
