[project]
name = "builder"
version = "0.1.0"
description = ""
authors = [{ name = "juanchaopan", email = "juanchaopan@gmail.com" }]
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "scrapy (>=2.14.1,<3.0.0)",
    "jsonlines (>=4.0.0,<5.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "readability-lxml (>=0.8.4.1,<0.9.0.0)",
    "llama-index (>=0.14.12,<0.15.0)",
    "chromadb (>=1.4.1,<2.0.0)",
    "llama-index-vector-stores-chroma (>=0.5.5,<0.6.0)",
    "llama-index-embeddings-ollama (>=0.8.6,<0.9.0)",
    "marko (>=2.2.2,<3.0.0)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "tree-sitter-language-pack (>=0.13.0,<0.14.0)",
    "magika (>=1.0.1,<2.0.0)",
]

[dependency-groups]
dev = ["black (>=26.1.0,<27.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
