[project]
name = "chat"
version = "0.1.0"
description = ""
authors = [{ name = "juanchaopan", email = "juanchaopan@gmail.com" }]
requires-python = ">=3.10,<4.0"
dependencies = [
    "chromadb (>=1.4.1,<2.0.0)",
    "llama-index (>=0.14.13,<0.15.0)",
    "llama-index-vector-stores-chroma (>=0.5.5,<0.6.0)",
    "llama-index-embeddings-nvidia (>=0.4.2,<0.5.0)",
    "llama-index-llms-nvidia (>=0.4.4,<0.5.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["black (>=26.1.0,<27.0.0)", "debugpy (>=1.8.19,<2.0.0)", "awslambdaric (>=3.1.1,<4.0.0)"]
