[project]
name = "query"
version = "0.1.0"
description = ""
authors = [{ name = "juanchaopan", email = "juanchaopan@gmail.com" }]
requires-python = ">=3.10,<4.0"
dependencies = ["llama-index (>=0.14.13,<0.15.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["black (>=26.1.0,<27.0.0)"]
